Update audio source to new music file

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </section>
   </main>
   <!-- Music functionality -->
-  <audio id="mainMusic" src="song.mp3" preload="auto" loop style="display:none"></audio>
+  <audio id="mainMusic" src="phonk-music-phonk-2025-mix-401949.mp3" preload="auto" loop style="display:none"></audio>
   <button id="musicBtn" class="music-btn" style="display:none" aria-label="Pause music">
     <span id="musicBtnIcon">
       <svg class="icon" viewBox="0 0 24 24" fill="none"><rect x="5" y="4" width="4" height="16" rx="1.5" fill="currentColor"/><rect x="15" y="4" width="4" height="16" rx="1.5" fill="currentColor"/></svg>
