--- a/index.html
+++ b/index.html
@@ -299,58 +299,79 @@
     }
 
     // Music behavior for MAX compatibility
-    const music = document.getElementById('mainMusic');
-    const musicBtn = document.getElementById('musicBtn');
-    const musicBtnIcon = document.getElementById('musicBtnIcon');
-    const musicBtnLabel = document.getElementById('musicBtnLabel');
-    let musicStarted = false, isPaused = false;
+    // Music control refs
+  const music = document.getElementById('mainMusic');
+  const musicBtn = document.getElementById('musicBtn');
+  const musicBtnIcon = document.getElementById('musicBtnIcon');
+  const musicBtnLabel = document.getElementById('musicBtnLabel');
+  let musicStarted = false, isPaused = false;
 
-    function playMusicTrigger() {
-      if (!musicStarted) {
-        music.play().then(()=> {
-          musicStarted = true;
-          musicBtn.style.display = "flex";
-          isPaused = false;
-          musicBtnIcon.innerHTML = `<svg class="icon" viewBox="0 0 24 24" fill="none"><rect x="5" y="4" width="4" height="16" rx="1.5" fill="currentColor"/><rect x="15" y="4" width="4" height="16" rx="1.5" fill="currentColor"/></svg>`;
-          musicBtnLabel.textContent = "Pause";
-        }).catch(()=>{ /* fail silent, allow next tap to retry */ });
-      }
+  function playMusicTrigger() {
+    if (!musicStarted) {
+      music.play().then(() => {
+        musicStarted = true;
+        musicBtn.style.display = "flex";
+        isPaused = false;
+        musicBtnIcon.innerHTML =
+          `<svg class="icon" viewBox="0 0 24 24" fill="none"><rect x="5" y="4" width="4" height="16" rx="1.5" fill="currentColor"/><rect x="15" y="4" width="4" height="16" rx="1.5" fill="currentColor"/></svg>`;
+        musicBtnLabel.textContent = "Pause";
+        cleanupAllMusicEvents();
+      }).catch(() => {});
     }
-    function pauseMusic() {
-      music.pause(); isPaused = true;
-      musicBtnIcon.innerHTML = `<svg class="icon" viewBox="0 0 24 24"><polygon points="5,4 19,12 5,20" fill="currentColor"/></svg>`;
-      musicBtnLabel.textContent = "Play";
+  }
+  function pauseMusic() {
+    music.pause();
+    isPaused = true;
+    musicBtnIcon.innerHTML =
+      `<svg class="icon" viewBox="0 0 24 24"><polygon points="5,4 19,12 5,20" fill="currentColor"/></svg>`;
+    musicBtnLabel.textContent = "Play";
+  }
+  function resumeMusic() {
+    music.play();
+    isPaused = false;
+    musicBtnIcon.innerHTML =
+      `<svg class="icon" viewBox="0 0 24 24" fill="none"><rect x="5" y="4" width="4" height="16" rx="1.5" fill="currentColor"/><rect x="15" y="4" width="4" height="16" rx="1.5" fill="currentColor"/></svg>`;
+    musicBtnLabel.textContent = "Pause";
+  }
+  function toggleMusic() {
+    if (musicStarted) {
+      if (isPaused) resumeMusic();
+      else pauseMusic();
     }
-    function resumeMusic() {
-      music.play(); isPaused = false;
-      musicBtnIcon.innerHTML = `<svg class="icon" viewBox="0 0 24 24" fill="none"><rect x="5" y="4" width="4" height="16" rx="1.5" fill="currentColor"/><rect x="15" y="4" width="4" height="16" rx="1.5" fill="currentColor"/></svg>`;
-      musicBtnLabel.textContent = "Pause";
-    }
-    function toggleMusic() {
-      if (musicStarted) {
-        if (isPaused) resumeMusic(); else pauseMusic();
-      }
-    }
-    // Listen for tap/focus/click only ONCE for best coverage
-    function setupMusicAutoPlay() {
-      function fireOnce() {
-        playMusicTrigger();
-        document.removeEventListener('click',fireOnce,true);
-        document.removeEventListener('touchend',fireOnce,true);
-        document.removeEventListener('pointerup',fireOnce,true);
-      }
-      document.addEventListener('click',fireOnce,true);
-      document.addEventListener('touchend',fireOnce,true);
-      document.addEventListener('pointerup',fireOnce,true);
-    }
-    musicBtn.onclick = function(e) {
-      e.stopPropagation(); e.preventDefault();
-      toggleMusic();
-    };
-    (function(){
-      let d = getDeviceInfo(); injectCards(d);
-      setupMusicAutoPlay();
-    })();
+  }
+
+  // Attach *all* possible interaction listeners, clean up after first play
+  let allEvents = [
+    "click", "mousedown", "mouseup",
+    "pointerdown", "pointerup", "pointermove",
+    "touchstart", "touchend", "touchmove",
+    "keydown"
+  ];
+  function fireOncePlayMusic() {
+    playMusicTrigger();
+  }
+  function cleanupAllMusicEvents() {
+    allEvents.forEach(ev =>
+      document.removeEventListener(ev, fireOncePlayMusic, true)
+    );
+  }
+  function setupMusicAutoPlay() {
+    allEvents.forEach(ev => 
+      document.addEventListener(ev, fireOncePlayMusic, {capture:true, passive:true})
+    );
+  }
+
+  // Music pause/resume btn
+  musicBtn.onclick = function(e) {
+    e.stopPropagation(); e.preventDefault();
+    toggleMusic();
+  };
+
+  // On load
+  (function(){
+    let d = getDeviceInfo(); injectCards(d);
+    setupMusicAutoPlay();
+  })();
   </script>
 </body>
 </html>
